k8s/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: media-service
spec:
  hosts:
  - media-service
  http:
  - match:
    - uri:
        prefix: /media.MediaService
    route:
    - destination:
        host: media-service
        port:
          number: 3001
